# AlarmClock

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
docs/: Activity Diagrams.drawio  Object Model.drawio  Object Model2.drawio  README.md  STDS.drawio  STDS2.drawio  STDS3.drawio  Taakstructurering.docx  Use case beschrijvingen.docx  Use case diagram.drawio  ~$akstructurering.docx  ~$e case beschrijvingen.docx
libs/CleanCore/src/: crt_FromArduinoIDE.cpp
libs/CleanRTOS/examples/AllWaitables/: AllWaitables_ino.h
libs/CleanRTOS/examples/Flag/: Flag_ino.h
libs/CleanRTOS/examples/Logger/: Logger_ino.h  crt_TestLogger.h
libs/CleanRTOS/examples/Timer/: crt_TestTimer.h
libs/CleanRTOS/src/: crt_Flag.h  crt_Handler.h  crt_Logger.h  crt_MainInits.h  crt_Task.h  crt_Timer.h
libs/CleanRTOS/src/internals/: crt_FreeRTOS.h
main/: CMakeLists.txt  main.cpp  oled_example.ino
project/: AlarmInstelControl.h  Buzzer.h  Display.h  InstelControl.h  NecReceiver.h  OperationControl.h  Project_ino.h  SignalPauseDetector.h  TijdInstelControl.h  TsopReceiver.h  prj_Time.h
