idf_component_register(
    SRCS 
        "main.cpp"
        "oled_example.ino"
        "../components/arduino/libraries/Adafruit-GFX-Library-1.11.11/Adafruit_GFX.cpp"
        "../components/arduino/libraries/Adafruit_SSD1306-2.5.13/Adafruit_SSD1306.cpp"
        "../libs/CleanCore/src/crt_FromArduinoIDE.cpp"
    INCLUDE_DIRS
        "."
        "../libs/CleanRTOS/src" 
        "../libs/CleanRTOS/src/internals" 
        "../libs/CleanRTOS/examples/AllWaitables"
        "../libs/CleanRTOS/examples/Flag"
        "../libs/CleanRTOS/examples/Queue"
        "../libs/CleanRTOS/examples/Timer"
        "../libs/CleanRTOS/examples/HelloWorld"
        "../libs/CleanRTOS/examples/TwoTasks"
        "../libs/CleanRTOS/examples/MutexSection"
        "../libs/CleanRTOS/examples/Pool"
        "../libs/CleanRTOS/examples/Handler"
        "../libs/CleanRTOS/examples/Logger"
        "../libs/CleanRTOS/examples/TenTasks"
        "../libs/CleanRTOS_extraTests/examples/Handler2"
        "../libs/CleanRTOS_extraTests/examples/HasFired"
        "../libs/CleanRTOS_extraTests/examples/Mutex"
        "../libs/CleanRTOS_extraTests/examples/Queue2"
        "../libs/CleanCore/src"
        "../libs/CleanCore/examples/StdQueue"
        "../libs"
        "../components/arduino/libraries/WiFi/examples/WifiScan"
        "../components/arduino/libraries/Adafruit_BusIO-1.17.0"
        "../components/arduino/libraries/Adafruit_SSD1306-2.5.13"
        "../components/arduino/libraries/Adafruit-GFX-Library-1.11.11"
        "../pong"
)
